druid-derive/tests/ui/with-tuple-struct.rs
use druid::*;

#[derive(Lens)]
struct Foobar(i32, i64);

fn main() {}
